[package]
name = "bunny-manager"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = []
g1 = []

[dependencies]
anyhow = "1.0.102"
egui = "0.34.1"
egui_extras = { version = "0.34.1", features = ["image", "all_loaders"] }
egui-d3d9 = { path = "../egui-d3d9" }
humantime = "2.3.0"
mhfz-bunny-gui = { path = "../../mhfz-bunny-gui" }
mimalloc = "0.1.48"
retour = {version = "0.4.0-alpha.4", features = ["static-detour"]}
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
windows = { version = "0.62.2", features = ["Win32_Security","Win32_System_Threading", "Win32_System_LibraryLoader", "Win32_System_SystemServices", "Win32_Graphics_Direct3D9", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"] }
abi_stable = "0.11.3"
ilhook = { version = "2.3.0", default-features = false, features = ["x86"] }
