[package]
name = "bunny-manager"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.103"
egui = { version = "0.34.3", features = ["serde", "rayon"] }
egui_extras = { version = "0.34.3", features = ["all_loaders"] }
egui-d3d9 = { path = "../egui-d3d9" }
bunny-plugin = { git = "https://github.com/Relial/bunny-plugin.git", tag = "api-v2" }
mimalloc = "0.1.52"
retour = {version = "0.4.0-alpha.4", features = ["static-detour"]}
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
windows = { version = "0.62.2", features = ["Win32_Security","Win32_System_Threading", "Win32_System_LibraryLoader", "Win32_System_SystemServices", "Win32_Graphics_Direct3D9", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"] }
abi_stable = "0.11.3"
ilhook = { version = "2.3.0", default-features = false, features = ["x86"] }
jiff = "0.2.31"
rapidhash = "4.5.1"
image = "0.25.10"
serde = "1.0.228"
toml = "1.1.2"
